--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ date_format: "%B %d, %Y"
 show_excerpts: false       # show article excerpts on the home page
 show_frame: false          # 'true' adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
-minimal: false             # true = dark layout,  false = dark/light layout (I think)
+minimal: true              # true = dark layout ?
 
 # Menu
 
